--- a/package.json
+++ b/package.json
@@ -8,10 +8,23 @@
     "lint": "vue-cli-service lint"
   },
   "dependencies": {
+    "@fortawesome/fontawesome-free": "^7.0.0",
+    "@fortawesome/fontawesome-svg-core": "^1.3.0",
+    "@fortawesome/free-solid-svg-icons": "^5.15.4",
+    "@fortawesome/vue-fontawesome": "^2.0.6",
+    "@popperjs/core": "^2.11.8",
+    "animate.css": "^4.1.1",
+    "axios": "^1.11.0",
+    "bootstrap": "^5.3.7",
+    "bootstrap-icons": "^1.13.1",
+    "bootstrap-vue": "^2.23.1",
     "core-js": "^3.8.3",
     "vue": "^2.6.14",
+    "vue-notification": "^1.3.20",
     "vue-router": "^3.6.5",
-    "vuex": "^3.6.2"
+    "vue-toast-notification": "^0.6.3",
+    "vuex": "^3.6.2",
+    "vuex-persistedstate": "^3.2.1"
   },
   "devDependencies": {
     "@babel/core": "^7.12.16",
@@ -19,11 +32,8 @@
     "@vue/cli-plugin-babel": "~5.0.0",
     "@vue/cli-plugin-eslint": "~5.0.0",
     "@vue/cli-service": "~5.0.0",
-    "autoprefixer": "^10.4.21",
     "eslint": "^7.32.0",
     "eslint-plugin-vue": "^8.0.3",
-    "postcss": "^8.5.6",
-    "tailwindcss": "^4.1.11",
     "vue-template-compiler": "^2.6.14"
   },
   "eslintConfig": {
