--- a/package.json
+++ b/package.json
@@ -19,12 +19,15 @@
     "bootstrap-icons": "^1.13.1",
     "bootstrap-vue": "^2.23.1",
     "core-js": "^3.8.3",
+    "html2canvas": "^1.4.1",
+    "jspdf": "^3.0.1",
     "vue": "^2.6.14",
     "vue-notification": "^1.3.20",
     "vue-router": "^3.6.5",
     "vue-toast-notification": "^0.6.3",
     "vuex": "^3.6.2",
-    "vuex-persistedstate": "^3.2.1"
+    "vuex-persistedstate": "^3.2.1",
+    "xlsx": "^0.18.5"
   },
   "devDependencies": {
     "@babel/core": "^7.12.16",
